@startuml node_structure
title YOLO ROS Node Structure
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "yolo_ros" {

    ' --- Orchestrator ---
    class YoloDetectNode {
        -- Lifecycle --
        +on_configure(state: State) : CallbackReturn
        +on_activate(state: State) : CallbackReturn
        +on_deactivate(state: State) : CallbackReturn
        +on_cleanup(state: State) : CallbackReturn
        +on_shutdown(state: State) : CallbackReturn
        
        -- Callbacks --
        -timer_callback()
        
        -- Components --
        -camera_man_: unique_ptr<CameraManager>
        -detector_: unique_ptr<IDetector>
        -estimator_: unique_ptr<IPositionEstimator>
        -tracker_: unique_ptr<ITracker>
        -visualizer_: unique_ptr<Visualizer>
        
        -- ROS Interfaces --
        -tf_buffer_: shared_ptr<Buffer>
        -tf_listener_: shared_ptr<TransformListener>
        -detection_pub_: LifecyclePublisher<Detection2DArray>
    }

    ' --- Camera Management ---
    class CameraManager {
        +configure(num_cameras, rgbd_ids, ...)
        +activate()
        +deactivate()
        +gather_images() : vector<CameraData>
        
        -cameras_: vector<shared_ptr<CameraContext>>
        -on_camera_data(...)
    }

    struct CameraData {
        +color: cv::Mat
        +depth: cv::Mat
        +info: CameraInfo
        +header: Header
        +camera_index: int
    }

    struct CameraContext {
        +index: int
        +sync: shared_ptr<Synchronizer>
        +has_new_data: bool
    }
    
    class CompressedSubscriberWrapper {
        +CompressedSubscriberWrapper(node, topic, qos)
    }

    CameraManager *-- CameraContext
    CameraManager ..> CameraData
    CameraContext -- CompressedSubscriberWrapper : uses

    ' --- Visualization ---
    class Visualizer {
        +setup_publishers(rgbd_ids)
        +set_class_names(names)
        +publish_annotated_images(images, indices, results)
        
        -annotated_pubs_: vector<LifecyclePublisher<Image>>
        -get_color(id) : Scalar
    }

    ' --- Interfaces ---
    interface IDetector {
        +{abstract} load(model_path, config) : bool
        +{abstract} detect(images) : vector<vector<Result2D>>
    }

    interface IPositionEstimator {
        +{abstract} set_class_radii(radii)
        +{abstract} compute_3d(detection, depth, info) : Detection3D
    }

    interface ITracker {
        +{abstract} process(detections, tf_buffer, frame, time) : vector<Detection3D>
    }

    ' --- Implementations ---
    class YoloOpenCVDetector implements IDetector {
        +load(model_path, config) : bool
        +detect(images) : vector<vector<Result2D>>
        -net : cv::dnn::Net
    }

    class PositionEstimator implements IPositionEstimator {
        +compute_3d(...) : Detection3D
        -sample_depth_from_region(...)
    }

    class DetectionTracker implements ITracker {
        +process(...) : vector<Detection3D>
        -history_: map<int, DetectionGroup>
    }

    struct Result2D {
        +class_id: int
        +score: float
        +bbox: Rect
    }
    
    struct Detection3D {
        +result2d: Result2D
        +position: Point
        +header: Header
    }

    ' --- Relationships ---
    YoloDetectNode *-- CameraManager
    YoloDetectNode *-- Visualizer
    YoloDetectNode o-- IDetector
    YoloDetectNode o-- IPositionEstimator
    YoloDetectNode o-- ITracker
    
    IDetector ..> Result2D
    IPositionEstimator ..> Detection3D
    ITracker ..> Detection3D

}
@enduml
